--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -48,11 +48,13 @@
                     </ng-container>
                     <ng-container matColumnDef="Requested Qty">
                         <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
-                        <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
+                        <td mat-cell *matCellDef="let element">{{ element.requestedQty }} <span
+                                class="p-l-5">{{element.materialUnit}}</span> </td>
                     </ng-container>
                     <ng-container matColumnDef="Estimated Qty">
                         <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
-                        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
+                        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }} <span
+                                class="p-l-5">{{element.materialUnit}}</span> </td>
                     </ng-container>
                     <ng-container matColumnDef="Estimated Rate">
                         <th mat-header-cell *matHeaderCellDef>Estimated Rate</th>
