--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -1,64 +1,52 @@
 <form *ngIf="form" [formGroup]="form" (ngSubmit)="submit()">
+
   <div class="header-add-edit-dialog">
-      <h1 mat-dialog-title>Add Supplier</h1>
-      <button type="button" class="close" (click)="close()" aria-label="Close">
-        <span aria-hidden="true">×</span>
-      </button>
+    <h1 mat-dialog-title>Add Supplier</h1>
+    <button type="button" class="close" (click)="close()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
   </div>
 
-<div mat-dialog-content>
-  
-  <div class="row p-t-15 p-b-10">
-    <!--  -->
-    <div class="col-xs-12 display-flex supplier-dialog">
-      <mat-form-field class="border-input">
-        <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name" />
-      </mat-form-field>
-    </div>
-    
+  <div mat-dialog-content>
 
-    <!--  -->
-    <div class="col-xs-12 display-flex supplier-dialog">
-      <mat-form-field class="border-input">
-        <input matInput type="email" formControlName="email" placeholder="Email" />
-         <small
-              *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
-              class="form-error-msg"> Email is required </small>
-              <small
-              *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
-              class="form-error-msg"> Enter Valid Email</small>
-      </mat-form-field>
-    </div>
+    <div class="row p-t-15 p-b-10">
+      <div class="col-xs-12 display-flex supplier-dialog">
+        <mat-form-field class="border-input">
+          <input matInput type="text" formControlName="supplier_name" placeholder="Supplier Name" />
+        </mat-form-field>
+      </div>
 
-    <!--  -->
-    <div class="col-xs-12 display-flex supplier-dialog">
-      <mat-form-field class="border-input">
-        <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
-         <small
-              *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
-              class="form-error-msg"> Phone No is required </small>
-              <small
-              *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched"
-              class="form-error-msg"> Enter Valid Phone No</small>
-      </mat-form-field>
-    </div>
+      <div class="col-xs-12 display-flex supplier-dialog">
+        <mat-form-field class="border-input">
+          <input matInput type="email" formControlName="email" placeholder="Email" />
+          <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched"
+            class="form-error-msg"> Email is required </small>
+          <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched"
+            class="form-error-msg"> Enter Valid Email</small>
+        </mat-form-field>
+      </div>
 
-    <!-- -->
-     <div class="col-xs-12 display-flex supplier-dialog">
-      <mat-form-field class="border-input">
-        <input matInput type="text" formControlName="pan" placeholder="Pan" />
-      </mat-form-field>
+      <div class="col-xs-12 display-flex supplier-dialog">
+        <mat-form-field class="border-input">
+          <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
+          <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
+            class="form-error-msg"> Phone No is required </small>
+          <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched"
+            class="form-error-msg"> Enter Valid Phone No</small>
+        </mat-form-field>
+      </div>
+
+      <div class="col-xs-12 display-flex supplier-dialog">
+        <mat-form-field class="border-input">
+          <input matInput type="text" formControlName="pan" placeholder="PAN" />
+        </mat-form-field>
+      </div>
     </div>
   </div>
-</div>
 
-<div mat-dialog-actions class="save-btn-add-edit-user-modal">
-  <button
-    mat-raised-button
-    [disabled]="!form.valid"
-    class="main-background-color main-button color-white m-b-5"
-  >
-    Add
-  </button>
-</div>
+  <div mat-dialog-actions class="save-btn-add-edit-user-modal">
+    <button mat-raised-button [disabled]="!form.valid" class="main-background-color main-button color-white m-b-5">
+      Add
+    </button>
+  </div>
 </form>
