--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -52,6 +52,13 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="View Indent">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721">View Indent</a>
+          </td>
+        </ng-container>
+
         <!-- <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">
@@ -60,7 +67,7 @@
         </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr (click)="viewIndentDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
       </table>
 
@@ -114,6 +121,13 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="View Indent">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721">View Indent</a>
+          </td>
+        </ng-container>
+
         <!-- <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef>Date</th>
           <td mat-cell *matCellDef="let element">
@@ -122,7 +136,8 @@
         </ng-container> -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr (click)="viewIndentDetails(row)" mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <!-- (click)="viewIndentDetails(row)"  -->
       </table>
 
       <!-- end structure -->
