--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -1,14 +1,10 @@
-<div class="row ">
+<div class="row" *ngIf="mode==='edit'">
     <mat-card class="example-card">
         <mat-card-header class="upload-documents-mat-header">
-            <span class="text-semi-bold" *ngIf="mode==='edit'; else editBlock">
-
+            <span class="text-semi-bold">
                 <app-upload #uploadRef [documentListLength]="documentListLength" (onFileUpdate)="fileUpdate($event)">
                 </app-upload>
             </span>
-            <ng-template #editBlock>
-                Download Document
-            </ng-template>
         </mat-card-header>
         <mat-card-content>
             <mat-list class="pt-10">
