--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -2,11 +2,11 @@
         <div class="row">
             <span class="col-xs-6">
                 <span class="m-r-35 p-l-15">
-                    <span class="text-semi-bold"> *P.O. No.:</span>
+                    <span class="text-semi-bold"> P.O. No.:</span>
                     <span class="text-semi-bold" *ngIf="mode!='edit'; else editBlock">{{cardData.poNumber}}</span>
                     <ng-template #editBlock>
                         <mat-form-field class="border-input">
-                            <input matInput type="string" formControlName="orderNo" placeholder="P.O. No."
+                            <input matInput type="string" formControlName="orderNo" placeholder="*P.O. No."
                                 class="m-r-5" />
                         </mat-form-field>
                     </ng-template>
@@ -17,10 +17,10 @@
                     P.O. Valid Till: <span class="p-l-5">{{cardData.poValidUpto |date}}</span>
                 </span>
                 <ng-template #editDateBlock>
-                    <span class="text-semi-bold"> *P.O. Valid Till:
+                    <span class="text-semi-bold"> P.O. Valid Till:
                         <mat-form-field class="border-input">
                             <input matInput formControlName="endDate" [matDatepicker]="endDate"
-                                placeholder="Valid Till" />
+                                placeholder="*Valid Till" />
                             <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
                             <mat-datepicker #endDate startView="month"></mat-datepicker>
                         </mat-form-field>
@@ -47,6 +47,7 @@
                                                 class="material-icons main-color">
                                                 edit
                                             </i></a>
+
                                     </span>
                                 </mat-list-item>
                                 <mat-list-item mat-subheader> Phone
