--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -131,13 +131,14 @@
               <ng-container matColumnDef="action1">
                 <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                 <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
-                  <a [routerLink]="['../rfq-view', element.rfqId]">View RFQ</a>
+                  <a [routerLink]="['../rfq-view', element.rfqId]" style="color: #f47721">View RFQ</a>
                 </td>
               </ng-container>
               <ng-container matColumnDef="action2">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element;let i=index" class="action2" class="text-align-center">
-                  <a [routerLink]="['../rfq-bid/',element.rfqId]" class="text-align-center">View Bids</a>
+                  <a [routerLink]="['../rfq-bid/',element.rfqId]" class="text-align-center" style="color: #f47721">View
+                    Bids</a>
                 </td>
               </ng-container>
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -189,7 +190,7 @@
                   {{ element.materialCount }}
                 </td>
               </ng-container>
-              
+
               <ng-container matColumnDef="Total Supplier">
                 <th mat-header-cell *matHeaderCellDef class="text-align-center">Total Supplier</th>
                 <td mat-cell *matCellDef="let element" class="text-align-center">
@@ -228,7 +229,7 @@
               <ng-container matColumnDef="action1">
                 <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                 <td mat-cell *matCellDef="let element" class="action1" class="text-align-center">
-                  <a (click)="viewRfq(element)">View RFQ</a>
+                  <a (click)="viewRfq(element)" class="cursor" style="color: #f47721">View RFQ</a>
                 </td>
               </ng-container>
               <ng-container matColumnDef="action2">
