--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -12,7 +12,7 @@
                         (click)="goForward(stepper)" type="button">Next</button>
                 </span>
                 <span *ngIf="currentIndex===2">
-                    <button mat-raised-button class="main-background-color main-button color-white"
+                    <button mat-raised-button class="main-background-color main-button color-white" [disabled]="false"
                         (selectionChange)="selectionChange($event)" (click)="reviewRfq()" type="button">Next</button>
                 </span>
             </div>
