--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -61,7 +61,7 @@
       <mat-accordion>
         <!-- first Project -->
         <ng-template ngFor let-project [ngForOf]="checkedList" let-i="index">
-          <mat-expansion-panel class="myPanel">
+          <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 {{project.projectName}}
